@@ -26,6 +26,8 @@ $ENV{PATH} = "$ROOT_DIR:$ENV{PATH}" if $ENV{PATH} !~ m{\Q$ROOT_DIR\E/?:};
 $ENV{PERL5LIB} = join(':', "${ROOT_DIR}/lib", (grep { defined } $ENV{PERL5LIB}))
     if not $ENV{PERL5LIB} or $ENV{PERL5LIB} !~ m{\Q$ROOT_DIR\E(?:/lib)?/?:};
 $ENV{DH_AUTOSCRIPTDIR} = "$ROOT_DIR/autoscripts";
+# Nothing in the tests requires root.
+$ENV{DEB_RULES_REQUIRES_ROOT} = 'no';
 
 # Drop DEB_BUILD_PROFILES and DEB_BUILD_OPTIONS so they don't interfere
 delete($ENV{DEB_BUILD_PROFILES});
@@ -87,7 +89,7 @@ sub run_dh_tool {
 sub uid_0_test_is_ok {
     return $ROOT_OK if defined($ROOT_OK);
     my $ok = 0;
-    if (Debian::Debhelper::Dh_Lib::DH_ENABLE_RRR_SUPPORT or $< == 0) {
+    if ($< == 0) {
         $ok = 1;
     } else {
         system('fakeroot true 2>/dev/null');
