@@ -22,9 +22,7 @@ if (uid_0_test_is_ok()) {
 	plan skip_all => 'fakeroot required';
 }
 
-my $NEEDS_ROOT = { 'needs_root' => 1 };
-my $NEEDS_ROOT_NODOC_PROFILE = {
-	'needs_root' => 1,
+my $NODOC_PROFILE = {
 	'env' => {
 		'DEB_BUILD_PROFILES' => 'nodoc',
 	},
@@ -33,14 +31,14 @@ my $NEEDS_ROOT_NODOC_PROFILE = {
 my $doc = "debian/docfile";
 
 each_compat_subtest {
-	ok(run_dh_tool($NEEDS_ROOT, 'dh_installdocs', '-pbar', $doc));
+	ok(run_dh_tool('dh_installdocs', '-pbar', $doc));
 	ok(-e "debian/bar/usr/share/doc/bar/docfile");
 	remove_tree(qw(debian/foo debian/bar debian/baz));
 };
 
 each_compat_subtest {
 	#regression in debhelper 9.20160702 (#830309)
-	ok(run_dh_tool($NEEDS_ROOT, 'dh_installdocs', '-pbaz', '--link-doc=foo', $doc));
+	ok(run_dh_tool('dh_installdocs', '-pbaz', '--link-doc=foo', $doc));
 
 	ok(-l "debian/baz/usr/share/doc/baz");
 	ok(readlink("debian/baz/usr/share/doc/baz") eq 'foo');
@@ -49,7 +47,7 @@ each_compat_subtest {
 };
 
 each_compat_subtest {
-	ok(run_dh_tool($NEEDS_ROOT, 'dh_installdocs', '-pfoo', '--link-doc=bar', $doc));
+	ok(run_dh_tool('dh_installdocs', '-pfoo', '--link-doc=bar', $doc));
 
 	ok(-l "debian/foo/usr/share/doc/foo");
 	ok(readlink("debian/foo/usr/share/doc/foo") eq 'bar');
@@ -61,7 +59,7 @@ each_compat_subtest {
 
 each_compat_subtest {
 	# docs are ignored, but copyright file is still there
-	ok(run_dh_tool($NEEDS_ROOT_NODOC_PROFILE, 'dh_installdocs', $doc));
+	ok(run_dh_tool($NODOC_PROFILE, 'dh_installdocs', $doc));
 	for my $pkg (qw(foo bar baz)) {
 		ok(! -e "debian/$pkg/usr/share/doc/$pkg/docfile");
 		ok(-e "debian/$pkg/usr/share/doc/$pkg/copyright");
@@ -71,7 +69,7 @@ each_compat_subtest {
 
 each_compat_subtest {
 	# docs are ignored, but symlinked doc dir is still there
-	ok(run_dh_tool($NEEDS_ROOT_NODOC_PROFILE, 'dh_installdocs', '-pfoo', '--link-doc=bar',  $doc));
+	ok(run_dh_tool($NODOC_PROFILE, 'dh_installdocs', '-pfoo', '--link-doc=bar',  $doc));
 	ok(-l "debian/foo/usr/share/doc/foo");
 	ok(readlink("debian/foo/usr/share/doc/foo") eq 'bar');
 	ok(! -e "debian/foo/usr/share/doc/bar/docfile");
