@@ -22,7 +22,7 @@ if (uid_0_test_is_ok()) {
 
 each_compat_up_to_and_incl_subtest(10, sub {
 	make_path(qw(debian/foo debian/bar debian/baz));
-	ok(run_dh_tool({ 'needs_root' => 1 }, 'dh_installinit'));
+	ok(run_dh_tool('dh_installinit'));
 	ok(-e "debian/foo/lib/systemd/system/foo.service");
 	ok(find_script('foo', 'postinst'));
 	ok(run_dh_tool('dh_clean'));
@@ -32,14 +32,14 @@ each_compat_up_to_and_incl_subtest(10, sub {
 each_compat_from_and_above_subtest(11, sub {
 	make_path(qw(debian/foo debian/bar debian/baz));
 
-	ok(run_dh_tool({ 'needs_root' => 1 }, 'dh_installinit'));
+	ok(run_dh_tool('dh_installinit'));
 	ok(! -e "debian/foo/lib/systemd/system/foo.service");
 	ok(!find_script('foo', 'postinst'));
 	ok(run_dh_tool('dh_clean'));
 
 	make_path(qw(debian/foo/lib/systemd/system/ debian/bar debian/baz));
 	install_file('debian/foo.service', 'debian/foo/lib/systemd/system/foo.service');
-	ok(run_dh_tool({ 'needs_root' => 1 }, 'dh_installinit'));
+	ok(run_dh_tool('dh_installinit'));
 	ok(!find_script('foo', 'postinst'));
 	ok(run_dh_tool('dh_clean'));
 });
